# DesignPatterns

./: CMakeLists.txt  README.md  main.cpp
AbstractFactory/: description  description.md
AbstractFactory/template_cpp/: AbstractFactory.h  AbstractProductA.h  AbstractProductB.h  ConcreteFactory1.h  ConcreteFactory2.h  ConcreteProductA1.h  ConcreteProductA2.h  ConcreteProductB1.h  ConcreteProductB2.h
AbstractFactory/template_java/: AbstractFactory.java  AbstractProductA.java  AbstractProductB.java  (+7 more)
Adapter/: description  description.md
Bridge/: description  description.md
Builder/: description  description.md
ChainOfResponsability/: description  description.md
Command/: description  description.md
Composite/: description  description.md
Decorator/: description  description.md
Facade/: description  description.md
FactoryMethod/: description  description.md
Flyweight/: description  description.md
Iterator/: description  description.md
Mediator/: description  description.md
Memento/: description  description.md
Observer/: description  description.md
Prototype/: description  description.md
Proxy/: description  description.md
Singleton/: Counter.cpp  Counter.h  Singleton.h  description  description.md
State/: description  description.md
Strategy/: description  description.md
TemplateMethod/: description  description.md
UML/: ActivityDiagrams  ClassDiagrams  ComponentDiagram  CompositeStructureDiagrams  DeploymentDiagrams  InteractionDiagrams  ObjectDiagrams  PacketDiagrams  StateDiagrams  UML_basics  UML_words  Use-CaseDiagrams
(+182 files in other folders)
